--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,8 @@
 ---
 - name: Pull Docker Image from Docker Hub
   hosts: localhost
+  remote_user: ankita
+  become: false
   tasks:
     - name: Pull Docker Image
       docker_image:
